# AnsaEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  TrueEngine.drawio  build.sh  docker_build.sh  jenkins.sh
.github/workflows/: codeql-analysis.yml
TrueEditor/src/: Application.cpp
TrueEngine/: CMakeLists.txt
TrueEngine/API/Audio/: IAudio.hpp
TrueEngine/API/Core/Window/: WindowState.cpp
TrueEngine/API/IO/: IKeyboard.hpp  Keyboard.hpp
TrueEngine/API/Platform/: Core.hpp
TrueEngine/API/Platform/Settings/: GlfwSettingData.hpp  GlfwSettings.hpp  ISettings.hpp
TrueEngine/API/Platform/Window/: GLFW_Settings.hpp  GLFW_Window.hpp  GlfwWindow.hpp  ISettings_Data.h  IWindow.hpp  Window.hpp  WindowData.hpp  WindowManager.hpp  WindowState.hpp  glad.h
TrueEngine/API/Tools/Logger/: FallowLogger.hpp
TrueEngine/include/: TrueEngine.hpp
TrueEngine/src/: IAudio.cpp  IWindow.cpp  Keyboard.cpp  glad.c
TrueEngine/src/IO/: IKeyboard.cpp
TrueEngine/src/Platform/: GLFW_Settings.cpp  GLFW_Window.cpp  GlfwWindow.cpp  ISettings.cpp  IWindow.cpp
TrueEngine/src/Platform/Settings/: GlfwSettings.cpp  GlfwSettingsData.cpp
TrueEngine/src/Platform/Window/: Window.cpp  WindowData.cpp  WindowManager.cpp
doxygen/html/: AudioManager_8hpp_source.html  Core_8hpp_source.html  GLFW__Settings_8hpp_source.html  GLFW__Window_8hpp_source.html  IAudio_8hpp_source.html  IKeyboard_8hpp_source.html  ISettings_8hpp_source.html  ISettings__Data_8h_source.html  IWindow_8hpp_source.html  InputManager_8h_source.html  Keyboard_8hpp_source.html  TrueEngine_8hpp_source.html  WindowData_8hpp_source.html  WindowManager_8hpp_source.html  Window_8hpp_source.html  annotated.html  classAPI_1_1IO_1_1IKeyboard.html  classAPI_1_1IO_1_1Keyboard.html  classAPI_1_1Platform_1_1GLFW__Settings-members.html  classAPI_1_1Platform_1_1GLFW__Settings.html  classAPI_1_1Platform_1_1GLFW__SettingsData-members.html  classAPI_1_1Platform_1_1GLFW__SettingsData.html  classAPI_1_1Platform_1_1GLFW__SettingsData__coll__graph.map  classAPI_1_1Platform_1_1GLFW__SettingsData__inherit__graph.md5  classAPI_1_1Platform_1_1GLFW__Settings__inherit__graph.map  classAPI_1_1Platform_1_1GLFW__Settings__inherit__graph.md5  classAPI_1_1Platform_1_1GLFW__Window-members.html  classAPI_1_1Platform_1_1GLFW__Window.html  classAPI_1_1Platform_1_1GLFW__Window__inherit__graph.map  classAPI_1_1Platform_1_1GLFW__Window__inherit__graph.md5  classAPI_1_1Platform_1_1ISettings-members.html  classAPI_1_1Platform_1_1ISettings.html  classAPI_1_1Platform_1_1ISettings__Data-members.html  classAPI_1_1Platform_1_1ISettings__Data.html  classAPI_1_1Platform_1_1ISettings__Data__inherit__graph.map  classAPI_1_1Platform_1_1ISettings__Data__inherit__graph.md5  classAPI_1_1Platform_1_1ISettings__inherit__graph.map  classAPI_1_1Platform_1_1ISettings__inherit__graph.md5  classAPI_1_1Platform_1_1IWindow-members.html  classAPI_1_1Platform_1_1IWindow.html  (+56 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  searchdata.js
src/: CMakeLists.txt
src/FallowEditor/: CMakeLists.txt
src/FallowEditor/src/: Application.cpp
src/FallowEngine/: CMakeLists.txt
src/FallowEngine/Core/: CMakeLists.txt
src/FallowEngine/Core/Math/: CMakeLists.txt  Matrix.hpp  Matrix2D.hpp  MatrixTraits.hpp  Random.hpp
src/FallowEngine/Core/MemoryManager/: CMakeLists.txt
src/FallowEngine/Core/MemoryManager/Allocator/: Allocator.hpp  CMakeLists.txt  StackAllocator.hpp
src/FallowEngine/Core/Window/: CMakeLists.txt  Window.cpp  Window.hpp  WindowState.cpp  WindowState.hpp  WindowTraits.hpp
src/FallowEngine/Graphics/: FallowAlias.hpp
src/FallowEngine/Graphics/Buffers/: VAO.hpp  VBO.hpp
src/FallowEngine/Modules/: CMakeLists.txt
src/FallowEngine/Modules/Audio/: AudioManager.hpp  CMakeLists.txt
src/FallowEngine/Modules/Graphics/: CMakeLists.txt  FallowAlias.hpp
src/FallowEngine/Modules/Graphics/Buffers/: CMakeLists.txt  VAO.hpp  VBO.hpp
src/FallowEngine/Modules/Graphics/Components/: CMakeLists.txt  Mash.hpp
src/FallowEngine/Modules/IO/: CMakeLists.txt  InputManager.h  Keyboard.hpp
src/FallowEngine/Tools/: CMakeLists.txt
src/FallowEngine/Tools/Logger/: CMakeLists.txt  Container.hpp  FallowLogger.hpp  LogBehavior.hpp  LogStyle.cpp  LogStyle.hpp  Logging.hpp
src/FallowEngine/Tools/Readers/: json.hpp
src/FallowEngine/include/: FallowEngine.hpp
src/TrueEditor/: CMakeLists.txt
src/TrueEditor/src/: Application.cpp
src/TrueEngine/API/Audio/: AudioManager.hpp
src/TrueEngine/API/Core/Window/: Window.hpp  WindowState.hpp
src/TrueEngine/API/IO/: InputManager.cpp  InputManager.h  Keyboard.hpp
src/TrueEngine/API/Platform/Window/: Window.hpp
src/TrueEngine/API/Tools/IniReader/: ini.hpp
src/TrueEngine/include/: TrueEngine.hpp
src/TrueEngine/src/Audio/: AudioManager.cpp
tests/: .test_template.cmake.swp  CMakeLists.txt  test_template.cmake
tests/example/: CMakeLists.txt  main.cpp
